# thejellyfishmodular

./: .gitmodules  README.md  TOTS.sch  config.h
syncfucntion/: Makefile  Makefile.am  Makefile.in  config.h.in  config.status  configure  configure.ac  deps.mk  jelly_sync_input.c  jelly_sync_input.elf  jelly_sync_input.hex  jelly_sync_input.map  scaler.h  spi_over_usi.S
